# Barrier

./: .gitignore  .ini  CHANGELOG.md  CMakeLists.txt  CmakeLists.txt  README.md  TODO.md  build_and_deploy.sh  configuration.ini  main.cpp  main.h  read_input.cpp  simulation.cpp  simulation.h  utils.cpp
include/: cross_section.h  data_reader.h  data_writer.h  error_handling.h  estuary.h  hydrograph.h  main.h  screen_presenter.h  simulation.h  utils.h  yaml_reader.h
others/: 01_to_geojson.py  02_visualize_results.py  03_visualize_diff.py  04_phase_diagram.py  along_channel_data.csv  create_GRE_file.py  create_along_channel_file.py  create_file.py  create_sediments_file.py  datosguadv44.txt  marea.TXT  sedimentos.txt  sediments  tides.csv  visualize_geometry.py  visualize_results.py
src/: cross_section.cpp  data_reader.cpp  data_writer.cpp  error_handling.cpp  estuary.cpp  hydrograph.cpp  main.cpp  read_input.cpp  screen_presenter.cpp  simulation.cpp  utils.cpp  yaml_reader.cpp
viewer/: app.py  environment.yml
